[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geomancy"
authors = [
    {name = "Justin Lorieau"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    ]
dynamic = ["version", "description"]
dependencies = ["pyyaml>=6.0", "click>=8.1", "click-default-group"]

[tool.setuptools]
packages = ["geomancy"]

[tool.setuptools.dynamic]
version = {attr = "geomancy.__version__"}
description = {file = "geomancy/__description__.txt"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "twine>=4.0",
    "black[d]",
    "build"
    ]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx_design>=0.4",
    "myst-parser>=2.0",
    "towncrier",
]

[project.scripts]
geo = "geomancy.entrypoints:geo_cli"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.towncrier]
package = "geomancy"
filename = "docs/changelog.md"
directory = "changelog/"
template = "changelog/changelog_template.jinja"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/jlorieau/geomancy/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/jlorieau/geomancy/issues/{issue})"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "improvement"
    name = "Improvements"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Improved Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "trivial"
    name = "Trivial/Internal Changes"
    showcontent = true
